maemo-launcher (0.27-1) UNRELEASED; urgency=low

  * New Upstream Release.
    - Port client to Hildon 1.x.
    - Use compile options determined from configure to build the client.
    - Use exit(3) instead of _exit(2) so that things like atexit(3) work.
      (Fixes: NB#80273)
  * Update copyright year in debian/copyright.

 -- Guillem Jover <guillem.jover@nokia.com>  Tue, 04 Dec 2007 20:03:29 +0200

maemo-launcher (0.26-1) unstable; urgency=low

  * New Upstream Release.
    - Fix memory leak when failing to allocate the childs structure.

 -- Guillem Jover <guillem.jover@nokia.com>  Wed, 03 Oct 2007 22:12:20 +0300

maemo-launcher (0.25-1) unstable; urgency=low

  * New Upstream Release.
    - Do not link against libstdc++ anymore. (Fixes: NB#69684)

 -- Guillem Jover <guillem.jover@nokia.com>  Tue, 25 Sep 2007 20:04:09 +0300

maemo-launcher (0.24-1) unstable; urgency=low

  * New Upstream Release.
    - Do not call dbus_shutdown as libdbus is too eager to abort.
      (Fixes: NB#65588)
  * Place maemo-launcher-dev on the libdevel Section.

 -- Guillem Jover <guillem.jover@nokia.com>  Thu, 30 Aug 2007 21:20:12 +0300

maemo-launcher (0.23-1) unstable; urgency=low

  * New Upstream Release.
    - Do not close D-Bus shared connections on the child sending the
      ApplicationDied signal. (Fixes: NB#65588)
    - Update documentation on how to integrate the launcher support into
      other projects.
    - Add support for nolauncher on DEB_BUILD_OPTIONS to dh_maemolauncher.

 -- Guillem Jover <guillem.jover@nokia.com>  Wed, 15 Aug 2007 20:36:19 +0300

maemo-launcher (0.22-1) unstable; urgency=low

  * New Upstream Release.
    - Update gtk booster module to support gtk+ 2.10. (Fixes: NM#952)
      Thanks to Johannes Schmid <johannes.schmid@openismus.com> for the
      initial patch.
    - Use memmove over overlapping memory in maemo-summoner. (Fixes: NB#49872)
    - Support path resolution from maemo-summoner and maemo-invoker.
      (Fixes: NM#1741, NB#55873)