@@ -5,6 +5,8 @@ maemo-launcher (0.27-1) UNRELEASED; urgency=low
     - Use compile options determined from configure to build the client.
     - Use exit(3) instead of _exit(2) so that things like atexit(3) work.
       (Fixes: NB#80273)
+    - Support upgrading the launcher via in-memory hot-swap while preserving
+      the state. (Fixes: NB#82624)
   * Update copyright year in debian/copyright.
 
  -- Guillem Jover <guillem.jover@nokia.com>  Tue, 04 Dec 2007 20:03:29 +0200
